fixing arrow stretch

--- a/css/main.css
+++ b/css/main.css
@@ -271,8 +271,6 @@ img {
 
 .contain{
   width: 100%;
-  margin: 0 auto;
-  padding: 0 0; 
   text-align: center;    
 }
 
